fix: changed dpi of image to speed up performance

--- a/abstract_api_test.ipynb
+++ b/abstract_api_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,28 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "arXiv:1811.04422v1  [cs.LG]  11 Nov 2018AnOptimalControlViewofAdversarialMachineLearningXiaojinZhuDepartmentofComputerSciences,UniversityofWisconsin-MadisonAbstractIdescribeanoptimalcontrolviewofadversarialmachinelearning,wherethedynamicalsystemisthemachinelearner,theinputareadversarialactions,andthecontrolcostsaredenedbytheadversary'sgoalstodoharmandbehardtodetect.Thisviewencompassesmanytypesofadversarialmachinelearning,includingtest-itemattacks,training-datapoisoning,andadversarialrewardshaping.Theviewencouragesadversarialmachinelearningresearchertoutilizeadvancesincontroltheoryandreinforcementlearning.1AdversarialMachineLearningisnotMachineLearning Machinelearninghasitsmathematicalfoundationinconcentrationinequalities.Thisisaconsequenceoftheindependentandidentically-distributed(i.i.d.)dataassumption.Incontrast,Isuggestthatadversarialmachinelearningmayadoptoptimalcontrolasitsmathematicalfoundation[3,25].Therearetelltalesigns:adversarialattackstendtobesubtleandhavepeculiarnon-i.i.d.structures{ascontrolinputmightbe.2OptimalControl Iwillfocusondeterministicdiscrete-timeoptimalcontrolbecauseitmatchesmanyexistingadversarialattacks.Extensionstostochasticandcontinuouscontrolarerelevanttoadversarialmachinelearning,too.Thesystemtobecontrollediscalledtheplant,whichisdenedbythesystemdynamics:xt+1=f(xt;ut)(1)wherext2Xtisthestateofthesystem,ut2Utisthecontrolinput,andUtisthecontrolconstraintset.Thefunctionfdenestheevolutionofstateunderexternalcontrol.Thetimeindextrangesfrom0toT 1,andthetimehorizonTcanbeniteorinnite.Thequalityofcontrolisspecedbytherunningcost:gt(xt;ut)(2)whichdenesthestep-by-stepcontrolcost,andtheterminalcostfornitehorizon:gT(xT)(3)whichdenesthequalityofthenalstate.Theoptimalcontrolproblemistondcontrolinputsu0:::uT 1inordertominimizetheobjective:minu0:::uT 1gT(xT)+T 1Xt=0gt(xt;ut)(4)s.t.xt+1=f(xt;ut);ut2Ut;8tx0given1Moregenerally,thecontrolleraimstondcontrolpolicies˚t(xt)=ut,namelyfunctionsthatmapobservedstatestoinputs.Inoptimalcontrolthedynamicsfisknowntothecontroller.Therearetwostylesofsolutions:dynamicprogrammingandPontryaginminimumprinciple[2,10,17].Whenfisnotfullyknown,theproblembecomeseitherrobustcontrolwherecontroliscarriedoutinaminimaxfashiontoaccommodatetheworstcasedynamics[28],orreinforcementlearningwherethecontrollerprobesthedynamics[23].3AdversarialMachineLearningasControl Nowletustranslateadversarialmachinelearningintoacontrolformulation.Adversarialmachinelearningstudiesvulnerabilitythroughoutthelearningpipeline[4,13,20,26].Asexamples,Ipresenttraining-datapoisoning,test-timeattacks,andadversarialrewardshapingbelow.Inallcases,theadversaryattemptstocontrolthemachinelearningsystem,andthecontrolcostsreecttheadversary'sdesiretodoharmandbehardtodetect.Unfortunately,thenotationsfromthecontrolcommunityandthemachinelearningcommunityclash.Forexample,xdenotesthestateincontrolbutthefeaturevectorinmachinelearning.Iwillusethemachinelearningconventionbelow\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-c6924c663d8f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     90\u001b[0m     \u001b[0mcnt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mdummy2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcnt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"abstract\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m             \u001b[0mcnt\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text = text.split(\"\\n\\n\")\n",
     "\n",
@@ -203,22 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'I describe an optimal control view of adversarial machine learning, where the dynamical system is the machine learner, the input are adversarial actions, and the control costs are defined by the adversary’s goals to do harm and be hard to detect. This view encompasses many types of adversarial machine learning, including test-item attacks, training-data poisoning, and adversarial reward shaping. The view encourages adversarial machine learning researcher to utilize advances in control theory and reinforcement learning.'"
+       "'We present a framework for deformable object manipulation that interleaves planning and control, enabling complex manipulation tasks without relying on high-fidelity modeling or simulation. The key question we address is when should we use planning and when should we use control to achieve the task? Planners are designed to find paths through complex configuration spaces, but for highly underactuated systems, such as deformable objects, achieving a specific configuration is very difficult even with high-fidelity models. Conversely, controllers can be designed to achieve specific configurations, but they can be trapped in undesirable local minima due to obstacles. Our approach consists of three components: (1) A global motion planner to generate gross motion of the deformable object; (2) A local controller for refinement of the configuration of the deformable object; and (3) A novel deadlock prediction algorithm to determine when to use planning versus control. By separating planning from control we are able to use different representations of the deformable object, reducing overall complexity and enabling efficient computation of motion. We provide a detailed proof of probabilistic completeness for our planner, which is valid despite the fact that our system is underactuated and we do not have a steering function. We then demonstrate that our framework is able to successfully perform several manipulation tasks with rope and cloth in simulation which cannot be performed using either our controller or planner alone. These experiments suggest that our planner can generate paths efficiently, taking under a second on average to find a feasible path in three out of four scenarios. We also show that our framework is effective on a 16 DoF physical robot, where reachability and dual-arm constraints make the planning more difficult.'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "abstractextracter(\"http://arxiv.org/pdf/1811.04422v1\")"
+    "abstractextracter(\"https://arxiv.org/pdf/2001.09950.pdf\")"
    ]
   },
   {
