chore: removing unneeded files

--- a/AbstractAPI.ipynb
+++ b/AbstractAPI.ipynb
@@ -1,118 +1,142 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports\n",
-    "import textract\n",
-    "import string\n",
     "import re\n",
-    "from pathlib import Path\n",
     "import requests\n",
-    "import os\n",
-    "import pytesseract\n",
-    "#from pdf2image import convert_from_path\n",
-    "from wand.image import Image\n",
+    "import io\n",
+    "import string\n",
+    "from PyPDF2 import PdfFileReader"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get PDF text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
+    "r = requests.get(pdfurl, stream=True)\n",
+    "f = io.BytesIO(r.content)\n",
+    "reader = PdfFileReader(f)\n",
     "\n",
-    "# download pdf from url\n",
-    "\n",
-    "url = \"http://arxiv.org/pdf/1411.6753v1\"\n",
-    "url_name = url.split(\"/\")[-1]\n",
-    "\n",
-    "pdf = Path(url_name+\".pdf\")\n",
-    "response = requests.get(url)\n",
-    "pdf.write_bytes(response.content)\n",
-    "\n",
-    "#try:\n",
-    "#    text = textract.process(pdf)\n",
-    "#except:\n",
-    "    # this method takes much longer... either keep this here or replace with error message for user\n",
-    "#    text = textract.process(pdf, method=\"tesseract\", language=\"eng\")\n",
-    "# decode text string from pdf\n",
-    "#text = text.decode('utf-8')\n",
-    "\n",
-    "#pages = convert_from_path(pdf)\n",
-    "#text = \"\"\n",
-    "# Iterate through all the pages stored above \n",
-    "#for page in pages: \n",
-    "#    page.save(\"temp.jpg\", 'JPEG') \n",
-    "#    filename = \"temp.jpg\" \n",
-    "    # Recognize the text as string in image using pytesserct \n",
-    "#    out = pytesseract.image_to_string(\"temp.jpg\")\n",
-    "#    text += out\n",
-    "#    os.remove(\"temp.jpg\")\n",
-    "#    # stop when abstract has been found\n",
-    "#    if \"abstract\" in out.lower():\n",
-    "#        break\n",
-    "\n",
+    "# Get text\n",
     "text = \"\"\n",
-    "\n",
-    "with(Image(filename=pdf, resolution=500)) as source: \n",
-    "    for i, image in enumerate(source.sequence):\n",
-    "        Image(image).save(filename=\"temp.jpg\")\n",
-    "        out = pytesseract.image_to_string(\"temp.jpg\")\n",
-    "        text += out\n",
-    "        os.remove(\"temp.jpg\")\n",
-    "        # stop when abstract has been found\n",
-    "        if \"abstract\" in out.lower():\n",
-    "            break\n",
-    "\n",
-    "# split at double breaks\n",
+    "page = 0\n",
+    "while True:\n",
+    "    try:\n",
+    "        content = reader.getPage(page).extractText()\n",
+    "        text += content\n",
+    "        page += 1\n",
+    "    except:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract abstract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "text = text.split(\"\\n\\n\")\n",
+    "\n",
     "# collect abstract text\n",
     "abstract = []\n",
     "cnt = 0\n",
-    "while cnt < len(text):\n",
-    "    if \"abstract\" in text[cnt].lower():\n",
-    "        if \"abstract\" in text[cnt].lower() and len(text[cnt].split()) < 10:\n",
-    "            cnt += 1\n",
-    "        while True:\n",
-    "            if \"*\" in text[cnt] and len(text[cnt].split()) < 10:\n",
+    "\n",
+    "if \"\\n \\n\" in \" \".join(i for i in text):\n",
+    "    content = []\n",
+    "    for i in text:\n",
+    "        for j in i.split(\"\\n \\n\"):\n",
+    "            content.append(re.sub(\"\\n\", \"\", j))\n",
+    "    while cnt < len(content):\n",
+    "        if \"abstract\" in content[cnt].lower():\n",
+    "            if \"abstract\" in content[cnt].lower() and len(text[cnt].split()) < 10:\n",
     "                cnt += 1\n",
-    "            elif len(text[cnt].split()) > 10:\n",
-    "                if \"introduction\" in text[cnt][:20].lower() or \"i ntroduction\" in text[cnt][:20].lower():\n",
+    "            while True:\n",
+    "                if \"introduction\" in content[cnt].lower():\n",
     "                    break\n",
-    "                abstract.append(text[cnt])\n",
-    "                cnt +=1\n",
-    "            elif len(text[cnt].split()) == 1:\n",
-    "                try:\n",
-    "                    int(text[cnt])\n",
-    "                except:\n",
-    "                    break\n",
-    "                break\n",
-    "            else:\n",
-    "                break\n",
-    "        break\n",
-    "    else:\n",
-    "        cnt += 1\n",
-    "if not abstract:\n",
-    "    stop = 0\n",
-    "    while True:\n",
-    "        if \"introduction\" in text[stop].lower() and len(text[stop].split()) < 5:\n",
+    "                abstract.append(content[cnt])\n",
+    "                cnt += 1\n",
     "            break\n",
     "        else:\n",
-    "            stop += 1\n",
-    "    cnt = 0\n",
-    "    while cnt < stop:\n",
-    "        if text[cnt] == \" \" or len(text[cnt]) < 2:\n",
-    "            if len(text[cnt+1].split()) < 10:\n",
+    "            cnt += 1\n",
+    "else:\n",
+    "    while cnt < len(text):\n",
+    "        if \"abstract\" in text[cnt].lower():\n",
+    "            if \"abstract\" in text[cnt].lower() and len(text[cnt].split()) < 10:\n",
     "                cnt += 1\n",
+    "            while True:\n",
+    "                if \"*\" in text[cnt] and len(text[cnt].split()) < 10:\n",
+    "                    cnt += 1\n",
+    "                elif len(text[cnt].split()) > 10:\n",
+    "                    if \"introduction\" in text[cnt][:20].lower() or \"i ntroduction\" in text[cnt][:20].lower():\n",
+    "                        break\n",
+    "                    abstract.append(text[cnt])\n",
+    "                    cnt +=1\n",
+    "                elif len(text[cnt].split()) == 1:\n",
+    "                    try:\n",
+    "                        int(text[cnt])\n",
+    "                    except:\n",
+    "                        break\n",
+    "                    break\n",
+    "                else:\n",
+    "                    break\n",
+    "            break\n",
+    "        else:\n",
+    "            cnt += 1\n",
+    "    if not abstract:\n",
+    "        stop = 0\n",
+    "        while True:\n",
+    "            if \"introduction\" in text[stop].lower() and len(text[stop].split()) < 5:\n",
+    "                break\n",
     "            else:\n",
-    "                abstract.append(text[cnt+1])\n",
-    "                if text[cnt+1][-1] == \"-\" or text[cnt+1][:-1] == \"-\":\n",
-    "                    while True:\n",
-    "                        if text[cnt+2][0].islower():\n",
-    "                            abstract.append(text[cnt+2])\n",
-    "                            break\n",
-    "                        else:\n",
-    "                            cnt += 1\n",
-    "        cnt += 1\n",
+    "                stop += 1\n",
+    "        cnt = 0\n",
+    "        while cnt < stop:\n",
+    "            if text[cnt] == \" \" or len(text[cnt]) < 2:\n",
+    "                if len(text[cnt+1].split()) < 10:\n",
+    "                    cnt += 1\n",
+    "                else:\n",
+    "                    abstract.append(text[cnt+1])\n",
+    "                    if text[cnt+1][-1] == \"-\" or text[cnt+1][:-1] == \"-\":\n",
+    "                        while True:\n",
+    "                            if text[cnt+2][0].islower():\n",
+    "                                abstract.append(text[cnt+2])\n",
+    "                                break\n",
+    "                            else:\n",
+    "                                cnt += 1\n",
+    "            cnt += 1\n",
+    "            \n",
     "# format abstract to present to user\n",
     "abstract_string = \"\"\n",
     "for a in abstract:\n",
+    "    a = a.strip()\n",
     "    a = re.sub(\"-\\n\", \"\", a)\n",
     "    a = re.sub(\"\\n\", \" \", a)\n",
     "    if a[-1] not in string.punctuation:\n",
@@ -127,6 +151,7 @@
     "dummy1 = abstract_string.split(\". \")\n",
     "dummy2 = abstract_string.split()\n",
     "if \"abstract\" in dummy1[0].lower():\n",
+    "    print(dummy1[0])\n",
     "    cnt = 0\n",
     "    while True:\n",
     "        if dummy2[cnt].lower().strip() != \"abstract\":\n",
@@ -138,9 +163,14 @@
     "if abstract_string[:1] in string.punctuation or abstract_string[:1] == \"—\":\n",
     "    abstract_string = abstract_string[1:]\n",
     "abstract_string = abstract_string.strip()\n",
-    "print(\"Abstract:\\n\\n\", abstract_string)\n",
-    "\n",
-    "os.remove(pdf)"
+    "print(\"Abstract:\\n\\n\", abstract_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing the function"
    ]
   },
   {
@@ -149,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from abstract_api import abstractextracter"
+    "from abstractapi import abstractextracter"
    ]
   },
   {
@@ -160,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "'The Dynamic Scalability of resources, a problem in Infrastructure as a Service (IaaS) has been the hotspot for research and industry communities. The heterogeneous and dynamic nature of the Cloud workloads depends on the Quality of Service (QoS) allocation of appropriate workloads to appropriate resources. A workload is an abstraction of work that instance or set of instances that are going to perform. Running a web service or being a Hadoop data node is valid workloads. The efficient management of dynamic nature resources can be done with the help of workloads. Until workload is considered a fundamental capability, the Cloud resources cannot be utilized in an efficient manner. In this paper, different workloads have been identified and categorized along with their characteristics and constraints. The metrics based on Quality of Service (QoS) requirements have been identified for each workload and have been analyzed for creating better application design. Keywords— Cloud Computing; Infrastructure as a Service; Quality Attributes; Cloud Metrics'"
+       "'We present a framework for deformable object manipulation that interleaves planning and control, enabling complex manipulation tasks without relying on high-fidelity modeling or simulation. The key question we address is when should we use planning and when should we use control to achieve the task? Planners are designed to find paths through complex configuration spaces, but for highly underactuated systems, such as deformable objects, achieving a specific configuration is very difficult even with high-fidelity models. Conversely, controllers can be designed to achieve specific configurations, but they can be trapped in undesirable local minima due to obstacles. Our approach consists of three components: (1) A global motion planner to generate gross motion of the deformable object; (2) A local controller for refinement of the configuration of the deformable object; and (3) A novel deadlock prediction algorithm to determine when to use planning versus control. By separating planning from control we are able to use different representations of the deformable object, reducing overall complexity and enabling efficient computation of motion. We provide a detailed proof of probabilistic completeness for our planner, which is valid despite the fact that our system is underactuated and we do not have a steering function. We then demonstrate that our framework is able to successfully perform several manipulation tasks with rope and cloth in simulation which cannot be performed using either our controller or planner alone. These experiments suggest that our planner can generate paths efficiently, taking under a second on average to find a feasible path in three out of four scenarios. We also show that our framework is effective on a 16 DoF physical robot, where reachability and dual-arm constraints make the planning more difficult.'"
       ]
      },
      "execution_count": 2,
@@ -169,7 +199,7 @@
     }
    ],
    "source": [
-    "abstractextracter(\"http://arxiv.org/pdf/1411.6753v1\")"
+    "abstractextracter(\"https://arxiv.org/pdf/2001.09950.pdf\")"
    ]
   },
   {
