--- a/AbstractAPI.ipynb
+++ b/AbstractAPI.ipynb
@@ -199,7 +199,7 @@
     }
    ],
    "source": [
-    "abstractextracter(\"https://arxiv.org/pdf/2001.09950.pdf\")"
+    "abstractextracter(\"https://arxiv.org/pdf/2001.09950\")"
    ]
   },
   {
