--- a/AbstractAPI/AbstractAPI.ipynb
+++ b/AbstractAPI/AbstractAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,178 +36,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['arXiv:1811.04422v1  [cs.LG]  11 Nov 2018AnOptimalControlViewofAdversarialMachineLearning',\n",
-       " 'XiaojinZhu',\n",
-       " 'DepartmentofComputerSciences,UniversityofWisconsin-Madiso',\n",
-       " 'n',\n",
-       " 'Abstract',\n",
-       " 'Idescribeanoptimalcontrolviewofadversarialmachinele',\n",
-       " 'arning,wherethedynamicalsystemisthe',\n",
-       " 'machinelearner,theinputareadversarialactions,andthe',\n",
-       " \"controlcostsaredenedbytheadversary's\",\n",
-       " 'goalstodoharmandbehardtodetect.Thisviewencompassesm',\n",
-       " 'anytypesofadversarialmachine',\n",
-       " 'learning,includingtest-itemattacks,training-datapoi',\n",
-       " 'soning,andadversarialrewardshaping.Theview',\n",
-       " 'encouragesadversarialmachinelearningresearchertouti',\n",
-       " 'lizeadvancesincontroltheoryandreinforcement',\n",
-       " 'learning.',\n",
-       " '1AdversarialMachineLearningisnotMachineLearning',\n",
-       " '',\n",
-       " 'Machinelearninghasitsmathematicalfoundationinconcentrationin',\n",
-       " 'equalities.Thisisaconsequenceof',\n",
-       " 'theindependentandidentically-distributed(i.i.d.)dataassumption.I',\n",
-       " 'ncontrast,Isuggestthatadversarial',\n",
-       " 'machinelearningmayadoptoptimalcontrolasitsmathematicalfou',\n",
-       " 'ndation[3,25].Therearetelltalesigns:',\n",
-       " 'adversarialattackstendtobesubtleandhavepeculiarnon-i.i.d.st',\n",
-       " 'ructures{ascontrolinputmightbe.',\n",
-       " '2OptimalControl',\n",
-       " '',\n",
-       " 'Iwillfocusondeterministicdiscrete-timeoptimalcontrolbecause',\n",
-       " 'itmatchesmanyexistingadversarial',\n",
-       " 'attacks.Extensionstostochasticandcontinuouscontrolarer',\n",
-       " 'elevanttoadversarialmachinelearning,too.',\n",
-       " 'Thesystemtobecontrollediscalledtheplant,whichisdenedbythes',\n",
-       " 'ystemdynamics:',\n",
-       " 'x',\n",
-       " 't',\n",
-       " '+1',\n",
-       " '=',\n",
-       " 'f',\n",
-       " '(',\n",
-       " 'x',\n",
-       " 't',\n",
-       " ';u',\n",
-       " 't',\n",
-       " ')',\n",
-       " '(1)',\n",
-       " 'where',\n",
-       " 'x',\n",
-       " 't',\n",
-       " '2',\n",
-       " 'X',\n",
-       " 't',\n",
-       " 'isthestateofthesystem,',\n",
-       " 'u',\n",
-       " 't',\n",
-       " '2',\n",
-       " 'U',\n",
-       " 't',\n",
-       " 'isthecontrolinput,and',\n",
-       " 'U',\n",
-       " 't',\n",
-       " 'isthecontrolconstraint',\n",
-       " 'set.Thefunction',\n",
-       " 'f',\n",
-       " 'denestheevolutionofstateunderexternalcontrol.Thetimeind',\n",
-       " 'ex',\n",
-       " 't',\n",
-       " 'rangesfrom0',\n",
-       " 'to',\n",
-       " 'T',\n",
-       " '',\n",
-       " '1,andthetimehorizon',\n",
-       " 'T',\n",
-       " 'canbeniteorinnite.Thequalityofcontrolisspecedbytherunn',\n",
-       " 'ing',\n",
-       " 'cost:',\n",
-       " 'g',\n",
-       " 't',\n",
-       " '(',\n",
-       " 'x',\n",
-       " 't',\n",
-       " ';u',\n",
-       " 't',\n",
-       " ')',\n",
-       " '(2)',\n",
-       " 'whichdenesthestep-by-stepcontrolcost,andtheterminalc',\n",
-       " 'ostfornitehorizon:',\n",
-       " 'g',\n",
-       " 'T',\n",
-       " '(',\n",
-       " 'x',\n",
-       " 'T',\n",
-       " ')',\n",
-       " '(3)',\n",
-       " 'whichdenesthequalityofthenalstate.Theoptimalcontrolpr',\n",
-       " 'oblemistondcontrolinputs',\n",
-       " 'u',\n",
-       " '0',\n",
-       " ':::',\n",
-       " 'u',\n",
-       " 'T',\n",
-       " '',\n",
-       " '1',\n",
-       " 'inordertominimizetheobjective:',\n",
-       " 'min',\n",
-       " 'u',\n",
-       " '0',\n",
-       " ':::',\n",
-       " 'u',\n",
-       " 'T',\n",
-       " '',\n",
-       " '1',\n",
-       " 'g',\n",
-       " 'T',\n",
-       " '(',\n",
-       " 'x',\n",
-       " 'T',\n",
-       " ')+',\n",
-       " 'T',\n",
-       " '',\n",
-       " '1',\n",
-       " 'X',\n",
-       " 't',\n",
-       " '=0',\n",
-       " 'g',\n",
-       " 't',\n",
-       " '(',\n",
-       " 'x',\n",
-       " 't',\n",
-       " ';u',\n",
-       " 't',\n",
-       " ')(4)',\n",
-       " 's.t.',\n",
-       " 'x',\n",
-       " 't',\n",
-       " '+1',\n",
-       " '=',\n",
-       " 'f',\n",
-       " '(',\n",
-       " 'x',\n",
-       " 't',\n",
-       " ';u',\n",
-       " 't',\n",
-       " ')',\n",
-       " ';u',\n",
-       " 't',\n",
-       " '2',\n",
-       " 'U',\n",
-       " 't',\n",
-       " ';8',\n",
-       " 't',\n",
-       " 'x',\n",
-       " '0',\n",
-       " 'given',\n",
-       " '1',\n",
-       " '']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "text.split(\"\\n\")"
+    "text = r.content"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    " \n",
+    "def process_image(url):\n",
+    "    image = _get_image(url)\n",
+    "    image.filter(ImageFilter.SHARPEN)\n",
+    "    return pytesseract.image_to_string(image)\n",
+    " \n",
+    "def _get_image(url):\n",
+    "    return Image.open(StringIO(requests.get(url).content))\n",
+    "//"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
