feat: adding pdfminer.six extraction and wisdomaiengine.py file

--- a/AbstractAPI.ipynb
+++ b/AbstractAPI.ipynb
@@ -472,6 +472,197 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### PDFminer.six"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import packages\n",
+    "import io\n",
+    "import string\n",
+    "from pdfminer.pdfinterp import PDFResourceManager, PDFPageInterpreter\n",
+    "from pdfminer.converter import TextConverter\n",
+    "from pdfminer.layout import LAParams\n",
+    "from pdfminer.pdfpage import PDFPage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get bytes stream of web pdf\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
+    "#pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.09956\"\n",
+    "pdfurl = \"https://arxiv.org/pdf/2001.09412.pdf\"\n",
+    "#pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.10393.pdf\"\n",
+    "r = requests.get(pdfurl, stream=True)\n",
+    "f = io.BytesIO(r.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set up pdfminer\n",
+    "rsrcmgr = PDFResourceManager()\n",
+    "retstr = io.StringIO()\n",
+    "codec = 'utf-8'\n",
+    "laparams = LAParams()\n",
+    "device = TextConverter(rsrcmgr, retstr, codec=codec, laparams=laparams)\n",
+    "interpreter = PDFPageInterpreter(rsrcmgr, device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract abstract\n",
+    "content = []\n",
+    "for page in PDFPage.get_pages(f, caching=True, check_extractable=True):\n",
+    "    interpreter.process_page(page)\n",
+    "    text = retstr.getvalue()\n",
+    "    content.append(text)\n",
+    "    if \"abstract\" in text.lower():\n",
+    "        break\n",
+    "# close apps\n",
+    "device.close()\n",
+    "retstr.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# concatenate all text together\n",
+    "whole_text = \" \".join(t for t in content)\n",
+    "# split text based on double line breaks\n",
+    "text = whole_text.split(\"\\n\\n\")\n",
+    "cnt = 0\n",
+    "abstract_string = \"\"\n",
+    "keywords_string = \"\"\n",
+    "# if \"abstract\" header in text, use this block to extract abstract and keywords\n",
+    "if \"abstract\" in whole_text.lower():\n",
+    "    while cnt < len(text)-1:\n",
+    "        if \"introduction\" in text[cnt].lower():\n",
+    "            break\n",
+    "        if \"abstract\" in text[cnt].lower():\n",
+    "            if len(text[cnt].split()) < 2:\n",
+    "                cnt += 1\n",
+    "            abstract_string += text[cnt]\n",
+    "            cnt += 1\n",
+    "            if \"keywords\" in whole_text.lower() or \"key-words\" in whole_text.lower() or \"keyword\" in whole_text.lower() or \"key word\" in whole_text.lower():\n",
+    "                while True:\n",
+    "                    if \"keywords\" in text[cnt].lower() or \"key-words\" in text[cnt].lower() or \"keyword\" in text[cnt].lower() or \"key word\" in text[cnt].lower():\n",
+    "                        if len(text[cnt].split()) < 2:\n",
+    "                            cnt += 1\n",
+    "                        keywords_string += text[cnt]\n",
+    "                        if text[cnt].strip()[-1] in (\",\", \";\") and text[cnt+1].lower() not in (\"i\", \"i.\", \"1\", \"introduction\"):\n",
+    "                            keywords_string += text[cnt+1]\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        cnt += 1\n",
+    "                break\n",
+    "            break\n",
+    "        cnt += 1\n",
+    "# if \"abstract\" header does not exist, use this block to extract abstract and keywords\n",
+    "if not abstract_string:\n",
+    "    stop = 0\n",
+    "    # find break point to stop at introduction\n",
+    "    while True:\n",
+    "        if \"introduction\" in text[stop].lower():\n",
+    "            break\n",
+    "        else:\n",
+    "            stop += 1\n",
+    "    cnt = 0\n",
+    "    # iterate through each line up to introduction\n",
+    "    while cnt < stop:\n",
+    "        # if keywords, put this in keywords variable\n",
+    "        if \"keywords\" in text[cnt].lower() or \"key-words\" in text[cnt].lower() or \"keyword\" in text[cnt].lower() or \"key word\" in text[cnt].lower():\n",
+    "            if len(text[cnt].split()) < 2:\n",
+    "                cnt += 1\n",
+    "            keywords_string += text[cnt]\n",
+    "        # if a number or a short piece of redundant text\n",
+    "        elif len(text[cnt].split()) < 2:\n",
+    "            pass\n",
+    "        # if ocr has picked up annoying numebrs along side with many \"\\n\"\n",
+    "        elif text[cnt].count(\"\\n\") >= 3:\n",
+    "            dummy = text[cnt].split(\"\\n\")\n",
+    "            dummy_cnt = 0\n",
+    "            for d in dummy:\n",
+    "                if len(d)>1:\n",
+    "                    dummy_cnt += 1\n",
+    "            if dummy_cnt > 2:\n",
+    "                abstract_string += text[cnt]+\" \" \n",
+    "        else:\n",
+    "            abstract_string += text[cnt]+\" \"\n",
+    "        cnt += 1\n",
+    "# block to clean up keywords if it has appended extra text to the start\n",
+    "keywords_string_2 = \"\"\n",
+    "if \"\\n\" in keywords_string:\n",
+    "    keywords_dummy = keywords_string.split(\"\\n\")\n",
+    "    if \"keywords\" in keywords_dummy[0].lower() or \"key-words\" in keywords_dummy[0].lower() or \"keyword\" in keywords_dummy[0].lower() or \"key word\" in keywords_dummy[0].lower():\n",
+    "        pass\n",
+    "    else:\n",
+    "        cnt = 0\n",
+    "        while cnt < len(keywords_dummy):\n",
+    "            if \"keywords\" in keywords_dummy[cnt].lower() or \"key-words\" in keywords_dummy[cnt].lower() or \"keyword\" in keywords_dummy[cnt].lower() or \"key word\" in keywords_dummy[cnt].lower():\n",
+    "                if len(keywords_dummy[cnt].split()) < 2:\n",
+    "                    cnt += 1\n",
+    "                keywords_string_2 += keywords_dummy[cnt]\n",
+    "            cnt += 1\n",
+    "        keywords_string = keywords_string_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# format abstract to present to user\n",
+    "abstract = \"\"\n",
+    "abstract = re.sub(\"-\\n\", \"\", abstract_string)\n",
+    "abstract = re.sub(\"\\n\", \" \", abstract)\n",
+    "# remove word 'abstract' and date at start\n",
+    "if \"abstract\" in abstract[:8].lower():\n",
+    "    abstract = abstract[8:]\n",
+    "dummy1 = abstract.split(\". \")\n",
+    "dummy2 = abstract.split()\n",
+    "if \"abstract\" in dummy1[0].lower():\n",
+    "    cnt = 0\n",
+    "    while True:\n",
+    "        if \"abstract\" not in dummy2[cnt].lower().strip():\n",
+    "            cnt += 1\n",
+    "        else:\n",
+    "            cnt += 1\n",
+    "            break\n",
+    "    abstract = \" \".join(word for word in dummy2[cnt:])\n",
+    "if abstract[:1] in string.punctuation or abstract[:1] == \"—\":\n",
+    "    abstract = abstract[1:]\n",
+    "abstract = abstract.strip()\n",
+    "abstract = re.sub(\"  \", \" \", abstract)\n",
+    "# clean up and return abstract\n",
+    "print(abstract)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Testing the function"
    ]
   },
@@ -481,33 +672,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from abstractapi import abstractextracter"
+    "from wisdomaiengine import abstractextracter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The Dynamic Scalability of resources, a problem in Infrastructure as a Service (IaaS) has been the hotspot for research and industry communities. The heterogeneous and dynamic nature of the Cloud workloads depends on the Quality of Service (QoS) allocation of appropriate workloads to appropriate resources. A workload is an abstraction of work that instance or set of instances that are going to perform. Running a web service or being a Hadoop data node is valid workloads. The efficient management of dynamic nature resources can be done with the help of workloads. Until workload is considered a fundamental capability, the Cloud resources cannot be utilized in an efficient manner. In this paper, different workloads have been identified and categorized along with their characteristics and constraints. The metrics based on Quality of Service (QoS) requirements have been identified for each workload and have been analyzed for creating better application design.  Keywords— Cloud Computing; Infrastructure as a Service; Quality Attributes; Cloud Metrics'"
+       "'We introduce a random forest approach to enable spreads’ prediction in the primary catastrophe bond market. We investigate whether all information provided to investors in the offering circular prior to a new issuance is equally important in predicting its spread. The whole population of non-life catastrophe bonds issued from December 2009 to May 2018 is used. The random forest shows an impressive predictive power on unseen primary catastrophe bond data explaining 93% of the total variability. For comparison, linear regression, our benchmark model, has inferior predictive performance explaining only 47% of the total variability. All details provided in the offering circular are predictive of spread but in a varying degree. The stability of the results is studied. The usage of random forest can speed up investment decisions in the catastrophe bond industry.'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#url = \"http://arxiv.org/pdf/1811.04422v1\"\n",
-    "#url = \"https://arxiv.org/pdf/2001.09956\"\n",
-    "#url = \"https://arxiv.org/pdf/2001.09412.pdf\"\n",
-    "#url = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
-    "url = \"http://arxiv.org/pdf/1411.6753v1\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
+    "#pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.09956\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.09412.pdf\"\n",
+    "#pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"\n",
+    "pdfurl = \"https://arxiv.org/pdf/2001.10393.pdf\"\n",
     "\n",
-    "abstractextracter(url)"
+    "abstractextracter(pdfurl)"
    ]
   },
   {
